platforms routes, model, comtroller added
