# routes/index.js
@@ -15,6 +15,6 @@ router.use('/', require('./authRoutes'));
 router.use('/users', require('./userRoutes'));
 router.use("/characters", require("./characters"));
 router.use('/games', require('./games'));
-// router.use('/platforms', require('./platforms'));
+router.use('/platforms', require('./platforms'));
 
 module.exports = router;
